Transaction Tags: Use `visibility: hidden;` to prevent layout shift (#5636)
Instead of using `display: none;`, using `visibility: hidden;` will
still hold the element's space even when it's not visible. This prevents
the shifting of elements when the tag becomes visible during hovering.

Closes https://github.com/hackclub/hcb/issues/5635

--- a/app/assets/stylesheets/components/_transactions.scss
+++ b/app/assets/stylesheets/components/_transactions.scss
@@ -83,14 +83,14 @@ html[data-dark='true'] {
   }
 
   .add-tag-badge {
-    display: none;
+    visibility: hidden;
     cursor: pointer;
   }
 }
 
 [class^='transaction--']:hover .add-tag-badge,
 .add-tag-badge[aria-expanded='true'] {
-  display: block;
+  visibility: visible;
 }
 
 [class^='transaction--']:target {
